src/test/ui/borrowck/borrowck-in-static.nll.stderr
error[E0507]: cannot move out of captured variable in an `Fn` closure
  --> $DIR/borrowck-in-static.rs:5:17
   |
LL |     let x = Box::new(0);
   |         - captured outer variable
LL |     Box::new(|| x) //~ ERROR cannot move out of captured outer variable
   |                 ^ cannot move out of captured variable in an `Fn` closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
